threat intel africa website setup

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ authors:
     display_name: Threat Intel Africa
     avatar: 'assets/images/logo.png'
     email: alerts@threatintel.africa
-    web: https://threatintel.africa
+    website: https://threatintel.africa
     x: https://www.x.com/threatintelAF
     description: "African Tailored Threat Intelligence"
 
